syntax = "proto3";

package orders.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

import "order/v1/model/order-model.proto";

service OrderService {
  rpc Create (OrderCreateRequest) returns (OrderCreateResponse) {
    option (google.api.http) = {
      post: "/api/v1/order"
      body: "*"
    };
  }
  rpc Approve (OrderApproveRequest) returns (OrderApproveResponse) {
    option (google.api.http) = {
      post: "/api/v1/order/approve"
      body: "*"
    };
  }
  rpc Release (OrderReleaseRequest) returns (OrderReleaseResponse) {
    option (google.api.http) = {
      post: "/api/v1/order/release"
      body: "*"
    };
  }
  rpc Cancel (OrderCancelRequest) returns (OrderCancelResponse) {
    option (google.api.http) = {
      post: "/api/v1/order/cancel"
      body: "*"
    };
  }
  rpc Resume (OrderResumeRequest) returns (OrderResumeResponse) {
    option (google.api.http) = {
      post: "/api/v1/order/resume"
      body: "*"
    };
  }
  rpc Get (OrderGetRequest) returns (OrderGetResponse) {
    option (google.api.http) = {
      get: "/api/v1/order/{id}"
      response_body: "order"
    };
  }
  rpc List (OrderListRequest) returns (OrderListResponse) {
    option (google.api.http) = {
      get: "/api/v1/order"
      response_body: "orders"
    };
  }
}

message OrderCreateRequest {
  OrderCreate body = 1 [(buf.validate.field).required = true];
  bool two_phase_commit = 2;
  message OrderCreate {
    repeated Item items = 1 [(buf.validate.field).repeated.min_items = 1];
    string customer_id = 2 [(buf.validate.field).string.uuid = true];
    Order.Delivery delivery = 3 [(buf.validate.field).required = true];;

    message Item {
      string id = 1 [(buf.validate.field).string.uuid = true];
      int32 amount = 2 [(buf.validate.field).int32.gt = 0];
    }
  }
}

message OrderCreateResponse {
  string id = 1;
}

message OrderApproveRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  bool two_phase_commit = 2;
}

message OrderApproveResponse {
  string id = 1;
  optional Order.Status status = 2;
}

message OrderReleaseRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  bool two_phase_commit = 2;
}

message OrderReleaseResponse {
  string id = 1;
  optional Order.Status status = 2;
}

message OrderGetRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message OrderGetResponse {
  Order order = 1;
}

message OrderCancelRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  bool two_phase_commit = 2;
}

message OrderCancelResponse {
  string id = 1;
  optional Order.Status status = 2;
}

message OrderResumeRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  bool two_phase_commit = 2;
}

message OrderResumeResponse {
  string id = 1;
  Order.Status status = 2;
}

message OrderListRequest {}

message OrderListResponse {
  repeated Order orders = 1;
}

